fix: align login page text

--- a/src/theme/utilities.scss
+++ b/src/theme/utilities.scss
@@ -94,6 +94,10 @@ $justifies: (
   text-align: right;
 }
 
+.u-text-align--justify {
+  text-align: justify;
+}
+
 $weights: (
   'regular': 400,
   'medium': 500,
